<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detail.DetailActivity">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:contentDescription="@string/photo"
            android:src="@drawable/ic_book"
            android:scaleType="fitXY"
            android:background="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_matkul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:text="@string/matkul"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon" />

        <TextView
            android:id="@+id/tv_dosen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dosen"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_matkul"
            app:layout_constraintTop_toBottomOf="@+id/tv_matkul" />

        <TextView
            android:id="@+id/tv_dosen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/nama_dosen"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tv_dosen_title"
            app:layout_constraintTop_toTopOf="@+id/tv_dosen_title" />

        <TextView
            android:id="@+id/tv_nid_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/nid"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_dosen_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_dosen_title"/>

        <TextView
            android:id="@+id/tv_nid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:text="@string/nid_dosen"
            app:layout_constraintStart_toEndOf="@+id/tv_nid_title"
            app:layout_constraintTop_toTopOf="@+id/tv_nid_title" />

        <TextView
            android:id="@+id/tv_rv_mahasiswa_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rv_title"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_nid_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_nid_title"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_mahasiswa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rv_mahasiswa_title"
            tools:listitem="@layout/rv_mahasiswa" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>